fix: metodos overflow

--- a/src/styles/metodos/hero.styl
+++ b/src/styles/metodos/hero.styl
@@ -51,14 +51,20 @@
       text-decoration underline
 
   @media all and (max-width 500px)
+    margin 0
+    padding 0
+    width 100vw
+
     &__container
+      box-sizing border-box
       margin 0
       padding 2rem 0
       width 100%
 
     &__title
+      box-sizing border-box
       font-size 1.5rem
-      margin 6rem 2rem 4rem 2rem
+      margin 6rem auto 4rem auto
 
     &__section
     &__float
