--- a/src/styles/metodos/nav.styl
+++ b/src/styles/metodos/nav.styl
@@ -2,7 +2,7 @@
   position fixed
   left 0
   top 0
-  right 0
+  width 100vw
   z-index 50
 
   transition all 0.25s ease
@@ -18,4 +18,3 @@
     height 40px
     margin 0.75rem auto
     text-align center
-
